--- a/package.json
+++ b/package.json
@@ -1,86 +1,79 @@
 {
-  "name": "@jswork/react-textarea",
+  "name": "@jswork/react-ellipsis-middle",
   "version": "1.0.0",
-  "description": "Textarea with text limit for react.",
+  "description": "Ellipsis in middle for single line text.",
+  "license": "MIT",
   "main": "dist/index.js",
+  "typings": "dist/main.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack -p",
-    "postbuild": "node-sass src/components/style.scss dist/style.css",
+    "dev": "vite",
+    "clean": "rimraf dist",
     "predocs": "node build/markdown.js",
-    "docs": "cross-env NODE_ENV=docs webpack -p",
-    "postdocs": "t2k",
-    "pages": "./bin/docs.rb",
-    "start": "node build/server.js",
+    "build": "npm run clean && rollup -c",
+    "docs": "tsc && vite build",
+    "docs:serve": "vite preview",
     "test": "jest",
+    "pages": "github-cli -p",
     "release": "release-it"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/afeiship/react-textarea.git"
-  },
-  "keywords": [
-    "react",
-    "textarea"
-  ],
-  "author": "afei",
-  "license": "MIT",
-  "browserslist": {
-    "production": [
-      "last 2 version",
-      "Explorer >= 10",
-      "Android >= 4"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "bugs": {
-    "url": "https://github.com/afeiship/react-textarea/issues"
-  },
-  "homepage": "https://github.com/afeiship/react-textarea#readme",
-  "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-decorators": "^7.10.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/plugin-transform-parameters": "^7.10.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/register": "^7.11.5",
-    "@jswork/next-replace-in-file": "^1.0.0",
-    "@jswork/react-demokit": "^1.0.2",
-    "@jswork/react-markdown-props": "^1.0.1",
-    "@jswork/webpack-lib-kits": "^1.0.2",
-    "@testing-library/react": "^11.0.4",
-    "autoprefixer": "^10.0.1",
-    "babel-loader": "^8.1.0",
-    "cross-env": "^7.0.2",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
-    "express": "^4.17.1",
-    "indent-string": "^4.0.0",
-    "jest": "^26.4.2",
-    "node-sass": "^4.14.1",
-    "offline-plugin": "^5.0.7",
-    "prettier": "^2.1.2",
-    "release-it": "^14.2.1",
-    "string-replace-webpack-plugin": "^0.1.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.4"
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@jswork/next": "^1.0.4",
+    "@jswork/next-replace-in-file": "^1.0.0",
+    "@jswork/next-rollup-banner": "^1.0.2",
+    "@jswork/react-markdown-props": "^1.0.1",
+    "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-replace": "^2.3.4",
+    "@types/jest": "^26.0.19",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-test-renderer": "^17.0.0",
+    "@types/styled-components": "^5.1.9",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "babel-loader": "^8.2.2",
+    "core-js": "^3.8.2",
+    "css-loader": "^5.0.1",
+    "jest": "^26.6.3",
+    "react-scripts-ts": "^3.1.0",
+    "react-test-renderer": "^17.0.1",
+    "release-it": "^14.2.2",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.36.0",
+    "rollup-plugin-auto-external": "^2.0.0",
+    "rollup-plugin-banner": "^0.2.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-external-globals": "^0.6.1",
+    "rollup-plugin-node-externals": "^2.2.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-scss": "^2.6.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.29.0",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3",
+    "vite": "^2.3.4",
+    "vite-plugin-pwa": "^0.7.3"
   },
   "dependencies": {
+    "@jswork/filter-react-props": "^1.0.2",
     "@jswork/noop": "^1.0.0",
-    "autosize": "^4.0.2",
     "classnames": "^2.2.6"
   },
   "publishConfig": {
