--- a/package.json
+++ b/package.json
@@ -23,12 +23,6 @@
     "preset": "ts-jest",
     "testEnvironment": "node"
   },
-  "peerDependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@jswork/next": "^1.0.4",
@@ -47,6 +41,8 @@
     "core-js": "^3.8.2",
     "css-loader": "^5.0.1",
     "jest": "^26.6.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts-ts": "^3.1.0",
     "react-test-renderer": "^17.0.1",
     "release-it": "^14.2.2",
@@ -66,7 +62,9 @@
     "sass": "^1.32.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
+    "styled-components": "^5.3.0",
     "ts-jest": "^26.4.4",
+    "tslib": "^2.3.1",
     "typescript": "^4.1.3",
     "vite": "^2.3.4",
     "vite-plugin-pwa": "^0.7.3"
