--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/main.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
@@ -40,6 +41,7 @@
     "babel-loader": "^8.2.2",
     "core-js": "^3.8.2",
     "css-loader": "^5.0.1",
+    "indent-string": "^5.0.0",
     "jest": "^26.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
